syntax = "proto3";

option go_package = ".;order";
package order.v1;

message PlaceOrderRequest {
    int64 order_id = 1;
}

message PlaceOrderResponse {
    int64 order_id = 1;
    int64 payment_id = 2;
}

message Order {
    int64 id = 1;
    string name = 2;
}

message GetOrdersResponse {
    repeated Order orders = 1;
}

message GetOrdersRequest {}

service OrderService {
    rpc PlaceOrder (PlaceOrderRequest) returns (PlaceOrderResponse);
    rpc GetOrders (GetOrdersRequest) returns (GetOrdersResponse);
}