syntax = "proto3";

option go_package = ".;product";
package product.v1;

message Decimal {
    int64 units = 1;
    sfixed32 nanos = 2;
}

message UpdateProductInventoryRequest {
    int64 product_id = 1;
    int32 substracted_quantity = 2;
}

message UpdateProductInventoryResponse {
    bool operation_success = 1;
    string error_message = 2;
}

message Product {
    string id = 1;
    string name = 2;
    Decimal price = 3;
    int32 quantiy = 4;
}

message GetProductsResponse {
    repeated Product products = 1;
}

message GetProductsRequest {
    repeated string productIds = 1;
}

service ProductService {
    rpc UpdateProductsInventory (UpdateProductInventoryRequest) returns (UpdateProductInventoryResponse);
    rpc GetProducts (GetProductsRequest) returns (GetProductsResponse);
}